apps/monitoring/base/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: model-monitoring
spec:
  selector:
    app: grafana
  ports:
    - name: http
      port: 80
      targetPort: 3000
