apps/monitoring/base/grafana/grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: model-monitoring
spec:
  to:
    kind: Service
    name: grafana
  port:
    targetPort: http
  tls:
    termination: edge
